# prime-testing-starter

./: README.md
config/: gatorgrade.yml
primality/: pyproject.toml
